fixed filters positioning, fixed switch, fixed state when add/edit panel is open, worked on mobile version

--- a/app/styles/add-transaction.scss
+++ b/app/styles/add-transaction.scss
@@ -13,6 +13,7 @@
     padding-top: 30px;
     background-color: #fff;
     box-shadow: 0 4px 5px 0 rgba(174, 198, 255, 0.19);
+    border-top: solid 1px #f4f4f4;
     @media(min-width:767px) {
       padding: 0 55px;
       padding-left: $sidebar-width + 55px;
@@ -78,7 +79,7 @@
       }
     }
     .switch-wrapper {
-      min-width: 140px;
+      min-width: 125px;
     }
     .transaction-btn {
       display: block;
