--- a/app/styles/add-wallet.scss
+++ b/app/styles/add-wallet.scss
@@ -13,6 +13,7 @@
     padding: 0 15px;
     background-color: #fff;
     box-shadow: 0 4px 5px 0 rgba(174, 198, 255, 0.19);
+    border-top: solid 1px #f4f4f4;
     @media(min-width:767px) {
     padding: 0 55px;
       padding-left: $sidebar-width + 55px;
