--- a/app/styles/transactions.scss
+++ b/app/styles/transactions.scss
@@ -7,16 +7,16 @@
   outline: none;
 }
 
-.transactions-wrapper {
-  padding-top: 70px;
-}
-
 .transactions {
   &-date {
     color: $add-transaction-color;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      @media(min-width:1366px) {
+        flex-direction: row;
+        align-items: center;
+      }
   }
 
   &-type {
@@ -26,10 +26,21 @@
 
   &-filter {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     @media(min-width:1024px) {
       flex-direction: row;
+    }
+    @media(min-width:1366px) {
       align-items: center;
+    }
+    .transactions-wrapper & {
+      align-items: center;
+      @media(min-width:1024px) {
+        align-items: flex-end;
+      }
+      @media(min-width:1366px) {
+        align-items: center;
+      }
     }
     &--item {
       margin-bottom: 15px;
@@ -40,7 +51,19 @@
         padding: 0;
       }
       .select-date {
-        margin-right: 30px;
+        min-width: 165px;
+        @media(min-width:480px) {
+          text-align: right;
+        }
+        @media(min-width:1366px) {
+          margin-right: 30px;
+        }
+        .transactions-wrapper & {
+          text-align: center;
+          @media(min-width:1024px) {
+            text-align: right;
+          }
+        }
       }
       @media(min-width:1024px) {
         margin-bottom: 0;
